--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
        <div class="contact-container"> 
         <div class="contact-card">
             <h3>Email</h3>
-            <p>info@techflow.com</p>
+            <a href="">info@techflow.com</a>
         </div>
         <div class="contact-card">
             <h3>Teléfono</h3>
@@ -152,7 +152,8 @@
     <option value="Analytics & BI">
    </datalist>
     <textarea placeholder="Cuéntanos sobre tu proyecto"></textarea>
-    <input type="submit">
+    <a href="./index.html" class="btn-enviar">Enviar</a>
+    
 
     </div>
     </div>
