Cambio de p a link en email del footer

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
     </div>
     <div class="footer-box">
         <h2>Contacto</h2>
-        <p>info@techflow.com</p>
+         <a href="">info@techflow.com</a>
         <p>+54 11 1234-5678</p>
         </div>
     <div class="footer-box">
